@@ -14,9 +14,8 @@ my $tgt = shift;
 # Another method which doesn't requires to run an executable would be to
 # generate assembler code accessing the various struct members and analyzing
 # it, but that's arguably a lot more effort.
-my $tgt_opt='-m64';
-$tgt_opt='-m32' unless ($tgt eq 'x86_64');
-open(TLS, $tls) or die "$0: couldn't open tls file \"$tls\" - $!\n";
+my $tgt_opt = $tgt eq 'x86_64' ? '-m64' : '-m32';
+open TLS, '<', $tls or die "$0: couldn't open tls file \"$tls\" - $!\n";
 my $struct = '';
 my @fields = ();
 my $def = '';
@@ -48,7 +47,7 @@ foreach ($tls =~ /^.*\n/mg) {
     }
 }
 close TLS;
-open(TMP, '>', "/tmp/$$.cc") or die "$0: couldn't open temporary index file \"/tmp/$$.c\" - $!\n";
+open TMP, '>', "/tmp/$$.cc" or die "$0: couldn't open temporary index file \"/tmp/$$.c\" - $!\n";
 print TMP <<EOF;
 #define __INSIDE_CYGWIN__
 #ifndef __x86_64__
@@ -68,8 +67,8 @@ main(int argc, char **argv)
 {
   $struct *foo;
 # define foo_beg ((char *) foo)
-# define offset(f) ((int) (((char *) &(foo->f)) - foo_beg) - CYGTLS_PADSIZE)
-# define poffset(f) (((char *) &(foo->f)) - ((char *) foo))
+# define offset(f) ((unsigned)((int) (((char *) &(foo->f)) - foo_beg) - CYGTLS_PADSIZE))
+# define poffset(f) ((unsigned)(((char *) &(foo->f)) - ((char *) foo)))
 EOF
     print TMP 'puts ("//;# autogenerated:  Do not edit.\n");', "\n\n";
     print TMP "printf (\"//; \$tls::start_offset = -%d;\\n\", CYGTLS_PADSIZE);\n";
@@ -89,12 +88,15 @@ EOF
 }
 EOF
 close TMP;
-system @ARGV, '-o', "/tmp/$$-1.cc", '-E', "/tmp/$$.cc";
+my @avoid_headers = qw'-D_XMMINTRIN_H_INCLUDED -D_ADXINTRIN_H_INCLUDED -D_EMMINTRIN_H_INCLUDED -D_X86INTRIN_H_INCLUDED';
+my @cmd = (@ARGV, @avoid_headers, '-o', "/tmp/$$-1.cc", '-E', "/tmp/$$.cc");
+$ENV{CCWRAP_VERBOSE}=1;
+system @cmd;
 system 'g++', "$tgt_opt", '-o', "/tmp/$$.a.out", "/tmp/$$-1.cc" and
 ($? == 127 && system 'c++', "$tgt_opt", '-o', "/tmp/$$.a.out", "/tmp/$$-1.cc") and
 die "$0: couldn't generate executable for offset calculation \"/tmp/$$.a.out\" - $!\n";
-open(TLS_OUT, '>', $tls_out) or die "$0: couldn't open tls index file \"$tls_out\" - $!\n";
-open(OFFS, "/tmp/$$.a.out|") or die "$0: couldn't run \"/tmp/$$.a.out\" - $!\n";
+open TLS_OUT, '>', $tls_out or die "$0: couldn't open tls index file \"$tls_out\" - $!\n";
+open OFFS, '-|', "/tmp/$$.a.out" or die "$0: couldn't run \"/tmp/$$.a.out\" - $!\n";
 print TLS_OUT <OFFS>;
 close OFFS;
 close TLS_OUT;
